# rust-by-example-coding-v2

./: .pre-commit-config.yaml  Cargo.toml  build.rs
examples/: 07_expression.rs
examples/01_hello_word/: comments.rs  debug_vs_display.md
examples/01_hello_word/formatted_print/: debug.rs  display.rs  formatting.rs
examples/02_primitives/: arrays_and_slices.rs  literals_and_operators.rs  tuples.rs
examples/03_custom_types/: const_vs_static.md  constants.rs  enums.rs  enums_linked_list.rs
examples/04_variable_bindings/: declare_first.rs  mutablility.rs  scope_and_shadowing.rs  summary.rs
examples/05_types/: aliasing.rs  casting.rs  interfence.rs
examples/06_conversion/: from_and_into.rs  to_and_from_strings.rs
examples/08_flow_of_control/: for_loops.rs  if_else.rs  if_let.rs  let_else.rs  match_binding.rs  match_guards.rs
examples/09_functions/: closures_as_input_parameters.rs  closures_capturing.rs  closures_input_functions.rs  closures_searching_through_iterators.rs
examples/13_attributes/: crates.rs
examples/14_generics/: associated_items.rs  empty_bounds.rs  implementation.rs  new_type_idiom.rs  phantom_type_parameters.rs
examples/15_scoping_rules/borrowing/: borrowing.rs
examples/15_scoping_rules/lifetimes/: bounds.rs  functions.rs  static_v3.rs
examples/15_scoping_rules/ownership_and_moves/: mutability.rs  partial_moves.rs
examples/16_traits/: derive.rs  impl_trait.rs  impl_trait_v3.rs  impl_trait_v4.rs
examples/17_macro_rules/: readme.rs
examples/17_macro_rules/syntax/: DRY.rs  DSL.rs  designators.rs  repeat.rs
examples/18_error_handling/: iterating_over_results.rs  panic.rs
examples/18_error_handling/multiple_error_types/: pulling_results_out_of_options_v2.rs
examples/18_error_handling/option_unwarp/: combinators_and_then.rs  combinators_map.rs  unpacking_options_and_defaults.rs  unpacking_options_with_x.rs
examples/18_error_handling/result/: introducing_x.rs
examples/19_std_library_types/: option.rs  vectors.rs
examples/20_std_misc/: channels.rs  file_v3.rs  filesystem_operations.rs  foreign_function_interface.rs
examples/20_std_misc/child_processes/: pipes.rs
examples/21_testing/: doc_testing.rs  unit_testing.rs
xtask/: Cargo.toml
xtask/src/: build_example.rs  main.rs
