[package]
name = "rust-by-example-coding-v2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "xtask"
]


[dependencies]

[[example]]
name = "01_hello_word_comments"
path = "examples/01_hello_word/comments.rs"

[[example]]
name = "01_hello_word_debug_vs_display"
path = "examples/01_hello_word/debug_vs_display.md"

[[example]]
name = "01_hello_word_formatted_print_debug"
path = "examples/01_hello_word/formatted_print/debug.rs"

[[example]]
name = "01_hello_word_formatted_print_display"
path = "examples/01_hello_word/formatted_print/display.rs"

[[example]]
name = "01_hello_word_formatted_print_formatting"
path = "examples/01_hello_word/formatted_print/formatting.rs"

[[example]]
name = "02_primitives_arrays_and_slices"
path = "examples/02_primitives/arrays_and_slices.rs"

[[example]]
name = "02_primitives_literals_and_operators"
path = "examples/02_primitives/literals_and_operators.rs"

[[example]]
name = "02_primitives_tuples"
path = "examples/02_primitives/tuples.rs"

[[example]]
name = "03_custom_types_const_vs_static"
path = "examples/03_custom_types/const_vs_static.md"

[[example]]
name = "03_custom_types_constants"
path = "examples/03_custom_types/constants.rs"

[[example]]
name = "03_custom_types_enums"
path = "examples/03_custom_types/enums.rs"

[[example]]
name = "03_custom_types_enums_c_like"
path = "examples/03_custom_types/enums_c_like.rs"

[[example]]
name = "03_custom_types_enums_linked_list"
path = "examples/03_custom_types/enums_linked_list.rs"

[[example]]
name = "03_custom_types_enums_use"
path = "examples/03_custom_types/enums_use.rs"

[[example]]
name = "03_custom_types_structures"
path = "examples/03_custom_types/structures.rs"

[[example]]
name = "04_variable_bindings_declare_first"
path = "examples/04_variable_bindings/declare_first.rs"

[[example]]
name = "04_variable_bindings_freezing"
path = "examples/04_variable_bindings/freezing.rs"

[[example]]
name = "04_variable_bindings_mutablility"
path = "examples/04_variable_bindings/mutablility.rs"

[[example]]
name = "04_variable_bindings_scope_and_shadowing"
path = "examples/04_variable_bindings/scope_and_shadowing.rs"

[[example]]
name = "04_variable_bindings_summary"
path = "examples/04_variable_bindings/summary.rs"

[[example]]
name = "05_types_aliasing"
path = "examples/05_types/aliasing.rs"

[[example]]
name = "05_types_casting"
path = "examples/05_types/casting.rs"

[[example]]
name = "05_types_interfence"
path = "examples/05_types/interfence.rs"

[[example]]
name = "05_types_literals"
path = "examples/05_types/literals.rs"

[[example]]
name = "06_conversion_from_and_into"
path = "examples/06_conversion/from_and_into.rs"

[[example]]
name = "06_conversion_to_and_from_strings"
path = "examples/06_conversion/to_and_from_strings.rs"

[[example]]
name = "06_conversion_tryfrom_and_tryinto"
path = "examples/06_conversion/tryfrom_and_tryinto.rs"

[[example]]
name = "07_expression"
path = "examples/07_expression.rs"

[[example]]
name = "08_flow_of_control_destructuring_array_or_slices"
path = "examples/08_flow_of_control/destructuring_array_or_slices.rs"

[[example]]
name = "08_flow_of_control_destructuring_enums"
path = "examples/08_flow_of_control/destructuring_enums.rs"

[[example]]
name = "08_flow_of_control_destructuring_pointer_or_ref"
path = "examples/08_flow_of_control/destructuring_pointer_or_ref.rs"

[[example]]
name = "08_flow_of_control_destructuring_structs"
path = "examples/08_flow_of_control/destructuring_structs.rs"

[[example]]
name = "08_flow_of_control_destructuring_tuples"
path = "examples/08_flow_of_control/destructuring_tuples.rs"

[[example]]
name = "08_flow_of_control_for_loops"
path = "examples/08_flow_of_control/for_loops.rs"

[[example]]
name = "08_flow_of_control_if_else"
path = "examples/08_flow_of_control/if_else.rs"

[[example]]
name = "08_flow_of_control_if_let"
path = "examples/08_flow_of_control/if_let.rs"

[[example]]
name = "08_flow_of_control_let_else"
path = "examples/08_flow_of_control/let_else.rs"

[[example]]
name = "08_flow_of_control_loop_nesting_and_labels"
path = "examples/08_flow_of_control/loop_nesting_and_labels.rs"

[[example]]
name = "08_flow_of_control_loop_returning_from_loops"
path = "examples/08_flow_of_control/loop_returning_from_loops.rs"

[[example]]
name = "08_flow_of_control_match_binding"
path = "examples/08_flow_of_control/match_binding.rs"

[[example]]
name = "08_flow_of_control_match_guards"
path = "examples/08_flow_of_control/match_guards.rs"

[[example]]
name = "08_flow_of_control_while"
path = "examples/08_flow_of_control/while.rs"

[[example]]
name = "08_flow_of_control_while_let"
path = "examples/08_flow_of_control/while_let.rs"

[[example]]
name = "09_functions_closures_as_input_parameters"
path = "examples/09_functions/closures_as_input_parameters.rs"

[[example]]
name = "09_functions_closures_as_output_parameters"
path = "examples/09_functions/closures_as_output_parameters.rs"

[[example]]
name = "09_functions_closures_capturing"
path = "examples/09_functions/closures_capturing.rs"

[[example]]
name = "09_functions_closures_input_functions"
path = "examples/09_functions/closures_input_functions.rs"

[[example]]
name = "09_functions_closures_iterator_any"
path = "examples/09_functions/closures_iterator_any.rs"

[[example]]
name = "09_functions_closures_searching_through_iterators"
path = "examples/09_functions/closures_searching_through_iterators.rs"

[[example]]
name = "09_functions_diverging_functions"
path = "examples/09_functions/diverging_functions.rs"

[[example]]
name = "09_functions_higher_order_functions"
path = "examples/09_functions/higher_order_functions.rs"

[[example]]
name = "09_functions_methods"
path = "examples/09_functions/methods.rs"

