[package]
name = "rust-by-example-coding-v2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "xtask"
]


[dependencies]

[[example]]
name = "01_hello_word_comments"
path = "examples/01_hello_word/comments.rs"

[[example]]
name = "01_hello_word_formatted_print_debug"
path = "examples/01_hello_word/formatted_print/debug.rs"

[[example]]
name = "01_hello_word_formatted_print_display"
path = "examples/01_hello_word/formatted_print/display.rs"

[[example]]
name = "01_hello_word_formatted_print_formatting"
path = "examples/01_hello_word/formatted_print/formatting.rs"

[[example]]
name = "02_primitives_arrays_and_slices"
path = "examples/02_primitives/arrays_and_slices.rs"

[[example]]
name = "02_primitives_literals_and_operators"
path = "examples/02_primitives/literals_and_operators.rs"

[[example]]
name = "02_primitives_tuples"
path = "examples/02_primitives/tuples.rs"

[[example]]
name = "03_custom_types_constants"
path = "examples/03_custom_types/constants.rs"

[[example]]
name = "03_custom_types_enums"
path = "examples/03_custom_types/enums.rs"

[[example]]
name = "03_custom_types_enums_c_like"
path = "examples/03_custom_types/enums_c_like.rs"

[[example]]
name = "03_custom_types_enums_linked_list"
path = "examples/03_custom_types/enums_linked_list.rs"

[[example]]
name = "03_custom_types_enums_use"
path = "examples/03_custom_types/enums_use.rs"

[[example]]
name = "03_custom_types_structures"
path = "examples/03_custom_types/structures.rs"

[[example]]
name = "04_variable_bindings_declare_first"
path = "examples/04_variable_bindings/declare_first.rs"

[[example]]
name = "04_variable_bindings_freezing"
path = "examples/04_variable_bindings/freezing.rs"

[[example]]
name = "04_variable_bindings_mutablility"
path = "examples/04_variable_bindings/mutablility.rs"

[[example]]
name = "04_variable_bindings_scope_and_shadowing"
path = "examples/04_variable_bindings/scope_and_shadowing.rs"

[[example]]
name = "04_variable_bindings_summary"
path = "examples/04_variable_bindings/summary.rs"

[[example]]
name = "05_types_aliasing"
path = "examples/05_types/aliasing.rs"

[[example]]
name = "05_types_casting"
path = "examples/05_types/casting.rs"

[[example]]
name = "05_types_interfence"
path = "examples/05_types/interfence.rs"

[[example]]
name = "05_types_literals"
path = "examples/05_types/literals.rs"

[[example]]
name = "06_conversion_from_and_into"
path = "examples/06_conversion/from_and_into.rs"

[[example]]
name = "06_conversion_to_and_from_strings"
path = "examples/06_conversion/to_and_from_strings.rs"

[[example]]
name = "06_conversion_tryfrom_and_tryinto"
path = "examples/06_conversion/tryfrom_and_tryinto.rs"

[[example]]
name = "07_expression"
path = "examples/07_expression.rs"

[[example]]
name = "08_flow_of_control_destructuring_array_or_slices"
path = "examples/08_flow_of_control/destructuring_array_or_slices.rs"

[[example]]
name = "08_flow_of_control_destructuring_enums"
path = "examples/08_flow_of_control/destructuring_enums.rs"

[[example]]
name = "08_flow_of_control_destructuring_pointer_or_ref"
path = "examples/08_flow_of_control/destructuring_pointer_or_ref.rs"

[[example]]
name = "08_flow_of_control_destructuring_structs"
path = "examples/08_flow_of_control/destructuring_structs.rs"

[[example]]
name = "08_flow_of_control_destructuring_tuples"
path = "examples/08_flow_of_control/destructuring_tuples.rs"

[[example]]
name = "08_flow_of_control_for_loops"
path = "examples/08_flow_of_control/for_loops.rs"

[[example]]
name = "08_flow_of_control_if_else"
path = "examples/08_flow_of_control/if_else.rs"

[[example]]
name = "08_flow_of_control_if_let"
path = "examples/08_flow_of_control/if_let.rs"

[[example]]
name = "08_flow_of_control_let_else"
path = "examples/08_flow_of_control/let_else.rs"

[[example]]
name = "08_flow_of_control_loop_nesting_and_labels"
path = "examples/08_flow_of_control/loop_nesting_and_labels.rs"

[[example]]
name = "08_flow_of_control_loop_returning_from_loops"
path = "examples/08_flow_of_control/loop_returning_from_loops.rs"

[[example]]
name = "08_flow_of_control_match_binding"
path = "examples/08_flow_of_control/match_binding.rs"

[[example]]
name = "08_flow_of_control_match_guards"
path = "examples/08_flow_of_control/match_guards.rs"

[[example]]
name = "08_flow_of_control_while"
path = "examples/08_flow_of_control/while.rs"

[[example]]
name = "08_flow_of_control_while_let"
path = "examples/08_flow_of_control/while_let.rs"

[[example]]
name = "09_functions_closures_as_input_parameters"
path = "examples/09_functions/closures_as_input_parameters.rs"

[[example]]
name = "09_functions_closures_as_output_parameters"
path = "examples/09_functions/closures_as_output_parameters.rs"

[[example]]
name = "09_functions_closures_capturing"
path = "examples/09_functions/closures_capturing.rs"

[[example]]
name = "09_functions_closures_input_functions"
path = "examples/09_functions/closures_input_functions.rs"

[[example]]
name = "09_functions_closures_iterator_any"
path = "examples/09_functions/closures_iterator_any.rs"

[[example]]
name = "09_functions_closures_searching_through_iterators"
path = "examples/09_functions/closures_searching_through_iterators.rs"

[[example]]
name = "09_functions_diverging_functions"
path = "examples/09_functions/diverging_functions.rs"

[[example]]
name = "09_functions_higher_order_functions"
path = "examples/09_functions/higher_order_functions.rs"

[[example]]
name = "09_functions_methods"
path = "examples/09_functions/methods.rs"

[[example]]
name = "10_modules_struct_visibility"
path = "examples/10_modules/struct_visibility.rs"

[[example]]
name = "10_modules_super_and_self"
path = "examples/10_modules/super_and_self.rs"

[[example]]
name = "10_modules_the_use_deciaration"
path = "examples/10_modules/the_use_deciaration.rs"

[[example]]
name = "10_modules_visibility"
path = "examples/10_modules/visibility.rs"

[[example]]
name = "13_attributes_cfg"
path = "examples/13_attributes/cfg.rs"

[[example]]
name = "13_attributes_crates"
path = "examples/13_attributes/crates.rs"

[[example]]
name = "13_attributes_dead_code"
path = "examples/13_attributes/dead_code.rs"

[[example]]
name = "14_generics_associated_items"
path = "examples/14_generics/associated_items.rs"

[[example]]
name = "14_generics_bounds"
path = "examples/14_generics/bounds.rs"

[[example]]
name = "14_generics_empty_bounds"
path = "examples/14_generics/empty_bounds.rs"

[[example]]
name = "14_generics_functions"
path = "examples/14_generics/functions.rs"

[[example]]
name = "14_generics_implementation"
path = "examples/14_generics/implementation.rs"

[[example]]
name = "14_generics_multiple_bounds"
path = "examples/14_generics/multiple_bounds.rs"

[[example]]
name = "14_generics_new_type_idiom"
path = "examples/14_generics/new_type_idiom.rs"

[[example]]
name = "14_generics_phantom_type_parameters"
path = "examples/14_generics/phantom_type_parameters.rs"

[[example]]
name = "14_generics_traits"
path = "examples/14_generics/traits.rs"

[[example]]
name = "14_generics_where_clauses"
path = "examples/14_generics/where_clauses.rs"

[[example]]
name = "15_scoping_rules_borrowing_aliasing"
path = "examples/15_scoping_rules/borrowing/aliasing.rs"

[[example]]
name = "15_scoping_rules_borrowing_borrowing"
path = "examples/15_scoping_rules/borrowing/borrowing.rs"

[[example]]
name = "15_scoping_rules_borrowing_mutability"
path = "examples/15_scoping_rules/borrowing/mutability.rs"

[[example]]
name = "15_scoping_rules_borrowing_the_ref_pattern"
path = "examples/15_scoping_rules/borrowing/the_ref_pattern.rs"

[[example]]
name = "15_scoping_rules_lifetimes_bounds"
path = "examples/15_scoping_rules/lifetimes/bounds.rs"

[[example]]
name = "15_scoping_rules_lifetimes_coerclon"
path = "examples/15_scoping_rules/lifetimes/coerclon.rs"

[[example]]
name = "15_scoping_rules_lifetimes_explicit_annotation"
path = "examples/15_scoping_rules/lifetimes/explicit_annotation.rs"

[[example]]
name = "15_scoping_rules_lifetimes_functions"
path = "examples/15_scoping_rules/lifetimes/functions.rs"

[[example]]
name = "15_scoping_rules_lifetimes_methods"
path = "examples/15_scoping_rules/lifetimes/methods.rs"

[[example]]
name = "15_scoping_rules_lifetimes_static"
path = "examples/15_scoping_rules/lifetimes/static.rs"

[[example]]
name = "15_scoping_rules_lifetimes_static_v2"
path = "examples/15_scoping_rules/lifetimes/static_v2.rs"

[[example]]
name = "15_scoping_rules_lifetimes_static_v3"
path = "examples/15_scoping_rules/lifetimes/static_v3.rs"

[[example]]
name = "15_scoping_rules_lifetimes_structs"
path = "examples/15_scoping_rules/lifetimes/structs.rs"

[[example]]
name = "15_scoping_rules_lifetimes_traits"
path = "examples/15_scoping_rules/lifetimes/traits.rs"

[[example]]
name = "15_scoping_rules_ownership_and_moves_mutability"
path = "examples/15_scoping_rules/ownership_and_moves/mutability.rs"

[[example]]
name = "15_scoping_rules_ownership_and_moves_oam"
path = "examples/15_scoping_rules/ownership_and_moves/oam.rs"

[[example]]
name = "15_scoping_rules_ownership_and_moves_partial_moves"
path = "examples/15_scoping_rules/ownership_and_moves/partial_moves.rs"

[[example]]
name = "15_scoping_rules_raii"
path = "examples/15_scoping_rules/raii.rs"

